# TURTH_GUARD

./: .gitignore  README.md  index.html  news.txt  package-lock.json  package.json  progress.md  pyproject.toml  run.bat  test_news.txt  tg.bat  tg.ps1  truthguard_mcp.py  truthguard_server.py  walkthrough.md
docs/: README.md  architecture.md  cli_explain.md  fullstack_spec.md  getting_started.md  image_analyzer.md  text_analyzer.md  video_audio_analyzer.md
src/: App.tsx
tests/: test_analyzers.py  test_cli.py
truthguard/: __init__.py  base.py
truthguard/audio/: __init__.py  analyzer.py
truthguard/cli/: __init__.py  main.py
truthguard/explain/: __init__.py  engine.py
truthguard/image/: __init__.py  analyzer.py
truthguard/text/: __init__.py  analyzer.py
truthguard/utils/: __init__.py  url_parser.py
truthguard/video/: __init__.py  analyzer.py
