[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "truthguard-sdk"
version = "0.1.0"
description = "AI-generated content and misinformation detection SDK & CLI framework."
authors = ["TruthGuard Contributors <contact@truthguard.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/truthguard/truthguard"
packages = [{include = "truthguard"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
requests = "^2.31.0"
rich = "^13.7.0"
click = "^8.1.0"

# Optional extras
transformers = { version = "^4.35.0", optional = true }
torch = { version = "^2.1.0", optional = true }
opencv-python = { version = "^4.8.0", optional = true }
pillow = { version = "^10.0.0", optional = true }
librosa = { version = "^0.10.0", optional = true }

[tool.poetry.extras]
text = ["transformers", "torch"]
image = ["opencv-python", "pillow", "torch"]
video = ["opencv-python", "pillow", "torch"]
audio = ["librosa", "torch"]
all = ["transformers", "torch", "opencv-python", "pillow", "librosa"]

[tool.poetry.scripts]
truthguard = "truthguard.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
